# cppwinrt-cmake

./: CMakeLists.txt  main.cpp
